# szagent

./: .env.example  .gitignore  AGENTS.md  INYOURDAY_AGENT_DEV.md  README.md  langgraph.json  package-lock.json  package.json  pyproject.toml
config/: base.nanobot.json
config/roles/: copywriter.json  image.json  listing.json  operator.json  qa.json  screening.json  sourcer.json
docs/: workflow-rules-and-algorithms.md
inyourday/: README.md
scripts/: generate-nanobot-configs.mjs  make-image-preview.mjs  run-gbrain-dream.sh  run-role.sh  sync-gbrain-knowledge.sh
src/productv2/: __init__.py  ai_locks.py  cli.py  config.py  control_api.py  data.py  db.py  dev_graph.py  enroute.py  enroute_human_reference_service.py  enroute_learning.py  feishu_long_connection.py  graph.py  image_generation.py  images.py  manual_review.py  model_profiles.py  models.py  profile_images.py  prompt_loader.py  prompts_service.py  reference_analysis.py  reference_analysis_service.py  review_channels.py  selection.py  state.py  vision.py  (+4 more)
tests/: test_adapters.py  test_cli.py  test_config.py  test_control_api.py  test_db.py  test_enroute.py  test_enroute_downloader.py  test_enroute_learning.py  test_enroute_reverse_llm_experiment.py  test_feishu_long_connection.py  test_graph.py  test_image_generation.py  test_images.py  test_model_profiles.py  test_prompt_loader.py  test_reference_analysis.py  test_review_channels.py  test_state.py  test_vision.py  test_wearing.py  test_workflow.py  test_workflow_logging.py
tools/: control-console.sh
web/: index.html  package-lock.json  package.json
(+58 files in other folders)
