[project]
name = "szagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "User", email = "user@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
szagent = "szagent.main:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
