[project]
name = "productv2"
version = "0.1.0"
description = "LangGraph product listing system based on candidate product data"
readme = "README.md"
authors = [
    { name = "User", email = "user@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "lark-oapi>=1.6.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
productv2 = "productv2:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.30",
    "pytest>=9.1.1",
]
